--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=bRiAAv"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=bRiAAv" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=Ks1upf"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=Ks1upf" type="text/css">
 
   
   
@@ -86,7 +86,7 @@
                 
                 <p class="mbr-fonts-style mbr-text mbr-white mb-3 display-7">Diseñamos y prototipamos servicios para las ciudades a escala humana que luego puedan transformarse en politicas pública.</p>
 
-                <div class="mbr-section-btn"><a class="btn btn-primary display-4" href="https://www.urbanatika.com">Aprender más</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-white-outline display-4" href="page2.html">Aprender más</a></div>
             </div>
         </div>
     </div>
@@ -122,9 +122,7 @@
                 <h1 class="mbr-section-title mbr-fonts-style mb-3 display-2"><strong>IoT Compost.</strong></h1>
                 <p class="mbr-text mbr-fonts-style display-7">
                     Prototipo de gestión de residuos orgánicos con internet de las cosas para levantamiento de información y educación ambiental.</p>
-                <div class="mbr-section-btn mt-3">
-                    <a class="btn btn-primary display-4" href="https://mobiri.se">Learn More</a>
-                </div>
+                <div class="mbr-section-btn mt-3"><a class="btn btn-white-outline display-4" href="page2.html">saber más!</a></div>
                 <div class="video-wrapper mt-4"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/D35t5gGqXng?rel=0&amp;amp;mute=1&amp;showinfo=0&amp;autoplay=1&amp;loop=1&amp;playlist=D35t5gGqXng" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
             </div>
         </div>
@@ -190,7 +188,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler mx-auto" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="YhJMzIH4TJOOy7ZajVgSMK7wtwB2BmBycxconctHqavHmOy0fimMLH2B3T/inVxEZQYbzrV7jmitgx2nclfxNbUkYuLeuKG1+jVIzqvQw6J7ZfUWNdQLTzh1y6qkDedR">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler mx-auto" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="JlW9tpILMnYPVJrwFDXfLhLYUZNO3DKU7TWWqJb4eE22eHT+aYnPnMXe2VKBE9nj8X4mTWGIUB/cwQ38DGkqiFhGbmmGn8XqkSiEHeatoP6/K13DpqX46N94XoSpsn7W">
                     <p class="mbr-text mbr-fonts-style align-center mb-4 display-7">Un miembro de nuestro equipo se pondrá en contacto contigo!</p>
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Gracias por escribirnos Urbanatiko!</div>
@@ -279,7 +277,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/686538" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-builder.html">AI Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/686538" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-maker.html">Best AI Website Maker</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 <input name="cookieData" type="hidden" data-cookie-cookiesAlertType='false' data-cookie-customDialogSelector='null' data-cookie-colorText='#424a4d' data-cookie-colorBg='rgb(234, 239, 241)' data-cookie-opacityOverlay='80' data-cookie-bgOpacity='undefined' data-cookie-textButton='Agree' data-cookie-rejectText='REJECT' data-cookie-colorButton='' data-cookie-rejectColor='' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="We use cookies to give you the best experience. Read our <a href='privacy.html'>cookie policy</a>.">
